style : fix modal thumb z-index, feat: ws update friend request sender avarar

--- a/src/main/resources/static/access/css/post.css
+++ b/src/main/resources/static/access/css/post.css
@@ -336,6 +336,7 @@
     position: fixed;
     top: 45%;
     left: 35%;
+    z-index: 2000;
 }
 
 .thumb-modal h3 {
